[project]
name = "writethem-eu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "requests>=2.31.0",
    "geopy>=2.4.0",
    "shapely>=2.1.0",
    "tqdm>=4.67.1",
    "pyshp>=2.3.1",
]

[dependency-groups]
dev = [
    "pyshp>=3.0.2.post1",
    "ruff>=0.14.0",
]
